--- a/recipes/templates/recipes/recipe_form.html
+++ b/recipes/templates/recipes/recipe_form.html
@@ -71,7 +71,7 @@
     }
     </script>
 
-<!-- I check if result was succesfull or abortive-->
+<!-- I check if result was successful or abortive-->
 {% if result %}
 {% if result == 'True' %}
 <h3 style="color: green;">Recipe is added</h3>
