End matters with likes

--- a/recipes/templates/recipes/bookRecipes.html
+++ b/recipes/templates/recipes/bookRecipes.html
@@ -47,7 +47,7 @@
                                         {% endif %}
                                     </td>
                                     <td>
-                                        <span class="badge">{{ recipe.likes }}</span>
+                                        <span class="badge">{{ recipe.likes.count }}</span>
                                     </td>
                                 </tr>
                             {% endfor %}
