--- a/recipes/templates/recipes/bookRecipes.html
+++ b/recipes/templates/recipes/bookRecipes.html
@@ -6,7 +6,7 @@
     <!--bootstrap, fonts from google -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
-    <link href="{% static 'recipes/style.css' %}" rel="stylesheet">
+    <link href="{% static 'recipes/style_bookRecipes.css' %}" rel="stylesheet">
 
 
  <div class="row">
