--- a/recipes/templates/recipes/single_recipe.html
+++ b/recipes/templates/recipes/single_recipe.html
@@ -1,23 +1,14 @@
 {% extends 'users/base.html' %}
 {% block title %}{{ single_recipe.title }}{% endblock %}
-<style>
-    span
-    {
-        font-size: 50px !important;
-        width:1000px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-</style>
 {% block body %}
 
     <div class="jumbotron">
       <div class="container">
 
         <div class="col-md-5">
-            <h1 class="display-3"><span style="color:#1D0D57; font-family: 'Droid Sans'" >{{single_recipe.title}}</span>{% if user.is_authenticated %}<a  href="{% url 'recipes:likes' single_recipe.id%}" class="btn-favorite"><span class="quantity pull-right glyphicon glyphicon-thumbs-{% if thumb_is_up %}down{% else %}up{% endif %}"></span></a>{% endif %}</h1>
+            <h1 class="display-3"><span>{{single_recipe.title}}</span>{% if user.is_authenticated %}<a  href="{% url 'recipes:likes' single_recipe.id%}" class="btn-favorite"><span class="quantity pull-right glyphicon glyphicon-thumbs-{% if thumb_is_up %}down{% else %}up{% endif %}"></span></a>{% endif %}</h1>
             <!--first line in description-->
-            <span style="font-size: 20px;font-weight: 600;">Author</span><span class="quantity pull-right" style="font-size: 20px;font-style: italic">{{ single_recipe.author.user.first_name }}</span><br><br>
+            <span style="font-size: 20px;font-weight: 600;">Author</span><span class="quantity pull-right" style="font-size: 20px;">{{ single_recipe.author.user.first_name }}</span><br><br>
             <!--second line in description-->
             <span style="font-size: 20px;font-weight: 600;">Level</span>
             <div class="quantity pull-right">
@@ -44,7 +35,7 @@
         <div class="panel panel-default col-md-5">
           <ul class="list-group">
             {% for element, value in dict.items %}
-                <li class="list-group-item"><span style="font-weight: 500;color: green;text-transform: uppercase">{{ element }}</span><span class="quantity pull-right" style="font-weight: 600;">{{ value }}</span></li>
+                <li class="list-group-item"><span style="font-weight: 500;color: black;text-transform: uppercase">{{ element }}</span><span class="quantity pull-right" style="font-weight: 600;">{{ value }}</span></li>
             {% endfor %}
             </ul>
         </div>
